const-tests/key_not_in_escape.stderr
error[E0080]: evaluation of constant value failed
 --> const-tests/key_not_in_escape.rs:3:28
  |
3 |   const _ESC: Escape<8, 4> = Escape::const_new(
  |  ____________________________^
4 | |     '\\',
5 | |     ['\\', '[', ']', '"', '\0', '\r', '\t', 'x'],
6 | |     [('\n', "n"), ('\r', "r"), ('\0', "0"), ('\t', "t")],
7 | |     None,
8 | | );
  | |_^ evaluation panicked: assertion failed: every_first_tr_char_must_be_in_escape
  |
note: inside `escaping::Escape::<'_, 8, 4>::const_new`
 --> src/lib.rs
  |
  |         assert!(every_first_tr_char_must_be_in_escape);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
